# fbref-scraper

./: main.py  pyproject.toml  scouting_report_2122.html  scouting_report_2122.txt  scouting_report_2223.html  scouting_report_2223.txt  scouting_report_2324.html  scouting_report_2324.txt  scouting_report_2425.html  scouting_report_2425.txt
docker/: docker-compose.yml
docker/init-db/: init.sql
docs/: code.md
fbref_scraper/: doc.md  urls.jsonl
fbref_scraper/docs/: Multi-Spider-Setup.md  Organizing Scrapy Pipelines in Separate Files.md  Working with Multiple Pipelines in Scrapy.md  doc.md  storing_items_in_database.md  url_types.md
fbref_scraper/fbref_scraper/: __init__.py  history_league_urls.jsonl  items.py  main.py  middlewares.py  settings.py
fbref_scraper/fbref_scraper/data/: history_league_urls.jsonl
fbref_scraper/fbref_scraper/pipelines/: __init__.py  cleaning.py  database.py  validation.py
fbref_scraper/fbref_scraper/spiders/: __init__.py  club_spider.py  league_spider.py
fbref_scraper/fbref_scraper/spiders/bak/: club_spider.py  club_urls_spider.py  competition_spider.py  player_id_spider.py  player_stats_spider.py  player_urls_spider.py  season_spider.py
fbref_scraper/fbref_scraper/utils/: url_builder.py  urls.py
fbref_scraper/tests/: db_connection.py
framework/: exceptions.py  settings.py
framework/http/: downloader.py  request.py  response.py
framework/parsers/: base_parser.py  bs4_parser.py
framework/pipelines/: base_pipeline.py
sql/: console.sql  console_1.sql
